fancify landing page and added assignment 4

--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <title>My test page</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-    <h1>CSC-196 Assignment 2a</h1>
+  <body class="main-body">
+    <nav class="navlinks">
+      <ul>
+        <button>Home</button>
+        <button href="./Assignment-4/fancifymytext.html">Assignment 4</button>
+        <button href="a5">Click me</button>
+        <button>Assignment </button>
+      </ul>
+    </nav>
+    <h1 class="main-heading">CSC-196 Assignment 2a</h1>
     <p>
-      The European Organization for Nuclear Research (French: Organisation
+      The European Organization for Nuclear Research (French: Organisationø
       européenne pour la recherche nucléaire), known as
       <strong>CERN</strong>(/sɜːrn/; French pronunciation: ​[sɛʁn]; derived from
       the name Conseil européen pour la recherche nucléaire), is a European
@@ -19,6 +28,7 @@
     </p>
     <h3><a href="https://en.wikipedia.org/wiki/CERN">Link to source</a></h3>
     <img
+      class="image-link"
       src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/CERN_logo.svg/320px-CERN_logo.svg.png"
     />
   </body>
