--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="utf-8" />
     <title>My test page</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="encrypt-it.js"></script>
   </head>
   <body class="main-body">
     <nav class="navlinks">
       <ul>
         <button>Home</button>
-        <button href="./Assignment-4/fancifymytext.html">Assignment 4</button>
-        <button href="a5">Click me</button>
-        <button>Assignment </button>
+        <button>
+          <a href="./Assignment-4/fancifymytext.html">Assignment 4</a>
+        </button>
+        <button><a href="./starter/encrypt-it.html">Assignment 5</a></button>
+        <button>Assignment</button>
       </ul>
     </nav>
     <h1 class="main-heading">CSC-196 Assignment 2a</h1>
